Removed unnecssary constant.

--- a/QueryForDapper.Postgres/QueryForDapper.Postgres.csproj
+++ b/QueryForDapper.Postgres/QueryForDapper.Postgres.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
-    <Version>0.6.0-beta</Version>
+    <Version>0.6.1</Version>
     <PackageProjectUrl>https://github.com/PostCharles/QueryForDapper.Postgres/</PackageProjectUrl>
     <PackageTags>Dapper Postgres PostgreSQL</PackageTags>
   </PropertyGroup>
