--- a/QueryForDapper.Postgres/QueryForDapper.Postgres.csproj
+++ b/QueryForDapper.Postgres/QueryForDapper.Postgres.csproj
@@ -2,13 +2,22 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
-    <Version>0.6.1</Version>
+    <Version>0.6.2</Version>
     <PackageProjectUrl>https://github.com/PostCharles/QueryForDapper.Postgres/</PackageProjectUrl>
     <PackageTags>Dapper Postgres PostgreSQL</PackageTags>
+    <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+    <AssemblyVersion>0.6.2.0</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\LICENSE.txt">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
